--- a/hw3/my-react-app/package.json
+++ b/hw3/my-react-app/package.json
@@ -13,6 +13,7 @@
     "eslint-config-airbnb": "^19.0.4",
     "file-loader": "^6.2.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
